deleted some old properties files, made the code more sound, added header to some code files
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/loopaccel@37048 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c